--- a/index.html
+++ b/index.html
@@ -179,6 +179,29 @@
              </div>
             </div>
         </section>
+          <section>
+            <div class="wrapper p-top">
+            <div class="app-container flex between">
+               <div class="app-image">
+                <img src="mobile-app.png">
+            </div>
+            <div>
+                <h5>Our Application</h5>
+                <h2>Simple Way To<br> Order Your Food</h2>
+                <p class="para">Discover food wherever and whenever <br>
+                and get your food delivery quickly.</p>
+                <a href="#" class="btn">Get the App</a>
+            </div>
+            </div>
+            </div>
+        </section>
+      </main>
+
+      <!-- FOOTER PART -->
+       <footer>
+        
+       </footer>
+       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
       </main>
 
       <!-- FOOTER PART -->
